--- a/static/styles/skeleton.css
+++ b/static/styles/skeleton.css
@@ -172,16 +172,17 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 0 30px;
+  padding: 10px 10px;
   color: rgb(238, 238, 238);
   text-align: center;
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
+  line-height: 14px;
   text-transform: uppercase;
   text-decoration: none;
-  white-space: nowrap;
+  white-space: text-wrap;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid rgb(228, 228, 228);
